simple virtual thread impl